[gd_scene load_steps=14 format=4 uid="uid://byiba8f8153we"]

[ext_resource type="Script" uid="uid://ctumvccgx6tl8" path="res://src/game/match.gd" id="1_163rt"]
[ext_resource type="Script" path="res://src/ui/game/match_ui.gd" id="2_7qitl"]
[ext_resource type="Shader" uid="uid://d3nwj71uk3tm" path="res://shaders/darkened_blur.gdshader" id="3_etpl8"]
[ext_resource type="PackedScene" uid="uid://cvrfa8432srf0" path="res://scenes/ui/game/end_game_modal.tscn" id="4_qhln7"]
[ext_resource type="TileSet" uid="uid://xd0jqo1f7ya4" path="res://assets/resources/terrain_tileset.tres" id="5_6sheb"]
[ext_resource type="Script" uid="uid://b5lfouqrpasn3" path="res://src/ui/game/board/board_ui.gd" id="6_wd52r"]
[ext_resource type="Script" uid="uid://orar4yfbku55" path="res://src/ui/camera.gd" id="7_icxsr"]
[ext_resource type="Script" uid="uid://b178hqhf1fe6f" path="res://src/game/board/board.gd" id="8_fe3c6"]
[ext_resource type="Script" uid="uid://cgpanl31l6m4r" path="res://src/game/board/board_tile_map.gd" id="9_0mk4c"]
[ext_resource type="Script" path="res://src/standard_tile_map.gd" id="10_x5wxo"]
[ext_resource type="Script" uid="uid://i3exemmdxb6d" path="res://src/game/board/board_input_manager.gd" id="11_k5pj8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_plr6o"]
shader = ExtResource("3_etpl8")
shader_parameter/lod = 2.5
shader_parameter/mix_percentage = 0.25
shader_parameter/color = Color(0.166556, 0.132474, 0.15523, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_toqnb"]

[node name="Match" type="Node2D"]
process_mode = 1
script = ExtResource("1_163rt")
match_name = "Left to die"
unit_count_per_player = 5

[node name="MatchUi" type="Node" parent="."]
script = ExtResource("2_7qitl")

[node name="UiCanvasLayer" type="CanvasLayer" parent="MatchUi"]
process_mode = 3

[node name="EndGamePanel" type="Panel" parent="MatchUi/UiCanvasLayer"]
visible = false
material = SubResource("ShaderMaterial_plr6o")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_toqnb")

[node name="EndGameModal" parent="MatchUi/UiCanvasLayer/EndGamePanel" instance=ExtResource("4_qhln7")]
layout_mode = 1

[node name="BoardGridTileMap" type="TileMapLayer" parent="MatchUi"]
modulate = Color(0.23552, 0.24, 0.1728, 0.0313726)
z_index = 128
tile_map_data = PackedByteArray("AAAAAAAAAAABAAsAAAAAAAEAAAABAAsAAAAAAAIAAAABAAsAAAAAAAMAAAABAAsAAAAAAAQAAAABAAsAAAAAAAUAAAABAAsAAAAAAAYAAAABAAsAAAAAAAcAAAABAAsAAAAAAAgAAAABAAsAAAAAAAkAAAABAAsAAAAAAAoAAAABAAsAAAAAAAsAAAABAAsAAAAAAAwAAAABAAsAAAAAAA0AAAABAAsAAAAAAA4AAAABAAsAAAAAAA8AAAABAAsAAAAAABAAAAABAAsAAAAAABEAAAABAAsAAAAAABIAAAABAAsAAAAAABMAAAABAAsAAAAAABQAAAABAAsAAAABAAAAAAABAAsAAAABAAEAAAABAAsAAAABAAIAAAABAAsAAAABAAMAAAABAAsAAAABAAQAAAABAAsAAAABAAUAAAABAAsAAAABAAYAAAABAAsAAAABAAcAAAABAAsAAAABAAgAAAABAAsAAAABAAkAAAABAAsAAAABAAoAAAABAAsAAAABAAsAAAABAAsAAAABAAwAAAABAAsAAAABAA0AAAABAAsAAAABAA4AAAABAAsAAAABAA8AAAABAAsAAAABABAAAAABAAsAAAABABEAAAABAAsAAAABABIAAAABAAsAAAABABMAAAABAAsAAAABABQAAAABAAsAAAACAAAAAAABAAsAAAACAAEAAAABAAsAAAACAAIAAAABAAsAAAACAAMAAAABAAsAAAACAAQAAAABAAsAAAACAAUAAAABAAsAAAACAAYAAAABAAsAAAACAAcAAAABAAsAAAACAAgAAAABAAsAAAACAAkAAAABAAsAAAACAAoAAAABAAsAAAACAAsAAAABAAsAAAACAAwAAAABAAsAAAACAA0AAAABAAsAAAACAA4AAAABAAsAAAACAA8AAAABAAsAAAACABAAAAABAAsAAAACABEAAAABAAsAAAACABIAAAABAAsAAAACABMAAAABAAsAAAACABQAAAABAAsAAAADAAAAAAABAAsAAAADAAEAAAABAAsAAAADAAIAAAABAAsAAAADAAMAAAABAAsAAAADAAQAAAABAAsAAAADAAUAAAABAAsAAAADAAYAAAABAAsAAAADAAcAAAABAAsAAAADAAgAAAABAAsAAAADAAkAAAABAAsAAAADAAoAAAABAAsAAAADAAsAAAABAAsAAAADAAwAAAABAAsAAAADAA0AAAABAAsAAAADAA4AAAABAAsAAAADAA8AAAABAAsAAAADABAAAAABAAsAAAADABEAAAABAAsAAAADABIAAAABAAsAAAADABMAAAABAAsAAAADABQAAAABAAsAAAAEAAAAAAABAAsAAAAEAAEAAAABAAsAAAAEAAIAAAABAAsAAAAEAAMAAAABAAsAAAAEAAQAAAABAAsAAAAEAAUAAAABAAsAAAAEAAYAAAABAAsAAAAEAAcAAAABAAsAAAAEAAgAAAABAAsAAAAEAAkAAAABAAsAAAAEAAoAAAABAAsAAAAEAAsAAAABAAsAAAAEAAwAAAABAAsAAAAEAA0AAAABAAsAAAAEAA4AAAABAAsAAAAEAA8AAAABAAsAAAAEABAAAAABAAsAAAAEABEAAAABAAsAAAAEABIAAAABAAsAAAAEABMAAAABAAsAAAAEABQAAAABAAsAAAAFAAAAAAABAAsAAAAFAAEAAAABAAsAAAAFAAIAAAABAAsAAAAFAAMAAAABAAsAAAAFAAQAAAABAAsAAAAFAAUAAAABAAsAAAAFAAYAAAABAAsAAAAFAAcAAAABAAsAAAAFAAgAAAABAAsAAAAFAAkAAAABAAsAAAAFAAoAAAABAAsAAAAFAAsAAAABAAsAAAAFAAwAAAABAAsAAAAFAA0AAAABAAsAAAAFAA4AAAABAAsAAAAFAA8AAAABAAsAAAAFABAAAAABAAsAAAAFABEAAAABAAsAAAAFABIAAAABAAsAAAAFABMAAAABAAsAAAAFABQAAAABAAsAAAAGAAAAAAABAAsAAAAGAAEAAAABAAsAAAAGAAIAAAABAAsAAAAGAAMAAAABAAsAAAAGAAQAAAABAAsAAAAGAAUAAAABAAsAAAAGAAYAAAABAAsAAAAGAAcAAAABAAsAAAAGAAgAAAABAAsAAAAGAAkAAAABAAsAAAAGAAoAAAABAAsAAAAGAAsAAAABAAsAAAAGAAwAAAABAAsAAAAGAA0AAAABAAsAAAAGAA4AAAABAAsAAAAGAA8AAAABAAsAAAAGABAAAAABAAsAAAAGABEAAAABAAsAAAAGABIAAAABAAsAAAAGABMAAAABAAsAAAAGABQAAAABAAsAAAAHAAAAAAABAAsAAAAHAAEAAAABAAsAAAAHAAIAAAABAAsAAAAHAAMAAAABAAsAAAAHAAQAAAABAAsAAAAHAAUAAAABAAsAAAAHAAYAAAABAAsAAAAHAAcAAAABAAsAAAAHAAgAAAABAAsAAAAHAAkAAAABAAsAAAAHAAoAAAABAAsAAAAHAAsAAAABAAsAAAAHAAwAAAABAAsAAAAHAA0AAAABAAsAAAAHAA4AAAABAAsAAAAHAA8AAAABAAsAAAAHABAAAAABAAsAAAAHABEAAAABAAsAAAAHABIAAAABAAsAAAAHABMAAAABAAsAAAAHABQAAAABAAsAAAAIAAAAAAABAAsAAAAIAAEAAAABAAsAAAAIAAIAAAABAAsAAAAIAAMAAAABAAsAAAAIAAQAAAABAAsAAAAIAAUAAAABAAsAAAAIAAYAAAABAAsAAAAIAAcAAAABAAsAAAAIAAgAAAABAAsAAAAIAAkAAAABAAsAAAAIAAoAAAABAAsAAAAIAAsAAAABAAsAAAAIAAwAAAABAAsAAAAIAA0AAAABAAsAAAAIAA4AAAABAAsAAAAIAA8AAAABAAsAAAAIABAAAAABAAsAAAAIABEAAAABAAsAAAAIABIAAAABAAsAAAAIABMAAAABAAsAAAAIABQAAAABAAsAAAAJAAAAAAABAAsAAAAJAAEAAAABAAsAAAAJAAIAAAABAAsAAAAJAAMAAAABAAsAAAAJAAQAAAABAAsAAAAJAAUAAAABAAsAAAAJAAYAAAABAAsAAAAJAAcAAAABAAsAAAAJAAgAAAABAAsAAAAJAAkAAAABAAsAAAAJAAoAAAABAAsAAAAJAAsAAAABAAsAAAAJAAwAAAABAAsAAAAJAA0AAAABAAsAAAAJAA4AAAABAAsAAAAJAA8AAAABAAsAAAAJABAAAAABAAsAAAAJABEAAAABAAsAAAAJABIAAAABAAsAAAAJABMAAAABAAsAAAAJABQAAAABAAsAAAAKAAAAAAABAAsAAAAKAAEAAAABAAsAAAAKAAIAAAABAAsAAAAKAAMAAAABAAsAAAAKAAQAAAABAAsAAAAKAAUAAAABAAsAAAAKAAYAAAABAAsAAAAKAAcAAAABAAsAAAAKAAgAAAABAAsAAAAKAAkAAAABAAsAAAAKAAoAAAABAAsAAAAKAAsAAAABAAsAAAAKAAwAAAABAAsAAAAKAA0AAAABAAsAAAAKAA4AAAABAAsAAAAKAA8AAAABAAsAAAAKABAAAAABAAsAAAAKABEAAAABAAsAAAAKABIAAAABAAsAAAAKABMAAAABAAsAAAAKABQAAAABAAsAAAALAAAAAAABAAsAAAALAAEAAAABAAsAAAALAAIAAAABAAsAAAALAAMAAAABAAsAAAALAAQAAAABAAsAAAALAAUAAAABAAsAAAALAAYAAAABAAsAAAALAAcAAAABAAsAAAALAAgAAAABAAsAAAALAAkAAAABAAsAAAALAAoAAAABAAsAAAALAAsAAAABAAsAAAALAAwAAAABAAsAAAALAA0AAAABAAsAAAALAA4AAAABAAsAAAALAA8AAAABAAsAAAALABAAAAABAAsAAAALABEAAAABAAsAAAALABIAAAABAAsAAAALABMAAAABAAsAAAALABQAAAABAAsAAAAMAAAAAAABAAsAAAAMAAEAAAABAAsAAAAMAAIAAAABAAsAAAAMAAMAAAABAAsAAAAMAAQAAAABAAsAAAAMAAUAAAABAAsAAAAMAAYAAAABAAsAAAAMAAcAAAABAAsAAAAMAAgAAAABAAsAAAAMAAkAAAABAAsAAAAMAAoAAAABAAsAAAAMAAsAAAABAAsAAAAMAAwAAAABAAsAAAAMAA0AAAABAAsAAAAMAA4AAAABAAsAAAAMAA8AAAABAAsAAAAMABAAAAABAAsAAAAMABEAAAABAAsAAAAMABIAAAABAAsAAAAMABMAAAABAAsAAAAMABQAAAABAAsAAAANAAAAAAABAAsAAAANAAEAAAABAAsAAAANAAIAAAABAAsAAAANAAMAAAABAAsAAAANAAQAAAABAAsAAAANAAUAAAABAAsAAAANAAYAAAABAAsAAAANAAcAAAABAAsAAAANAAgAAAABAAsAAAANAAkAAAABAAsAAAANAAoAAAABAAsAAAANAAsAAAABAAsAAAANAAwAAAABAAsAAAANAA0AAAABAAsAAAANAA4AAAABAAsAAAANAA8AAAABAAsAAAANABAAAAABAAsAAAANABEAAAABAAsAAAANABIAAAABAAsAAAANABMAAAABAAsAAAANABQAAAABAAsAAAAOAAAAAAABAAsAAAAOAAEAAAABAAsAAAAOAAIAAAABAAsAAAAOAAMAAAABAAsAAAAOAAQAAAABAAsAAAAOAAUAAAABAAsAAAAOAAYAAAABAAsAAAAOAAcAAAABAAsAAAAOAAgAAAABAAsAAAAOAAkAAAABAAsAAAAOAAoAAAABAAsAAAAOAAsAAAABAAsAAAAOAAwAAAABAAsAAAAOAA0AAAABAAsAAAAOAA4AAAABAAsAAAAOAA8AAAABAAsAAAAOABAAAAABAAsAAAAOABEAAAABAAsAAAAOABIAAAABAAsAAAAOABMAAAABAAsAAAAOABQAAAABAAsAAAAPAAAAAAABAAsAAAAPAAEAAAABAAsAAAAPAAIAAAABAAsAAAAPAAMAAAABAAsAAAAPAAQAAAABAAsAAAAPAAUAAAABAAsAAAAPAAYAAAABAAsAAAAPAAcAAAABAAsAAAAPAAgAAAABAAsAAAAPAAkAAAABAAsAAAAPAAoAAAABAAsAAAAPAAsAAAABAAsAAAAPAAwAAAABAAsAAAAPAA0AAAABAAsAAAAPAA4AAAABAAsAAAAPAA8AAAABAAsAAAAPABAAAAABAAsAAAAPABEAAAABAAsAAAAPABIAAAABAAsAAAAPABMAAAABAAsAAAAPABQAAAABAAsAAAAQAAAAAAABAAsAAAAQAAEAAAABAAsAAAAQAAIAAAABAAsAAAAQAAMAAAABAAsAAAAQAAQAAAABAAsAAAAQAAUAAAABAAsAAAAQAAYAAAABAAsAAAAQAAcAAAABAAsAAAAQAAgAAAABAAsAAAAQAAkAAAABAAsAAAAQAAoAAAABAAsAAAAQAAsAAAABAAsAAAAQAAwAAAABAAsAAAAQAA0AAAABAAsAAAAQAA4AAAABAAsAAAAQAA8AAAABAAsAAAAQABAAAAABAAsAAAAQABEAAAABAAsAAAAQABIAAAABAAsAAAAQABMAAAABAAsAAAAQABQAAAABAAsAAAARAAAAAAABAAsAAAARAAEAAAABAAsAAAARAAIAAAABAAsAAAARAAMAAAABAAsAAAARAAQAAAABAAsAAAARAAUAAAABAAsAAAARAAYAAAABAAsAAAARAAcAAAABAAsAAAARAAgAAAABAAsAAAARAAkAAAABAAsAAAARAAoAAAABAAsAAAARAAsAAAABAAsAAAARAAwAAAABAAsAAAARAA0AAAABAAsAAAARAA4AAAABAAsAAAARAA8AAAABAAsAAAARABAAAAABAAsAAAARABEAAAABAAsAAAARABIAAAABAAsAAAARABMAAAABAAsAAAARABQAAAABAAsAAAASAAAAAAABAAsAAAASAAEAAAABAAsAAAASAAIAAAABAAsAAAASAAMAAAABAAsAAAASAAQAAAABAAsAAAASAAUAAAABAAsAAAASAAYAAAABAAsAAAASAAcAAAABAAsAAAASAAgAAAABAAsAAAASAAkAAAABAAsAAAASAAoAAAABAAsAAAASAAsAAAABAAsAAAASAAwAAAABAAsAAAASAA0AAAABAAsAAAASAA4AAAABAAsAAAASAA8AAAABAAsAAAASABAAAAABAAsAAAASABEAAAABAAsAAAASABIAAAABAAsAAAASABMAAAABAAsAAAASABQAAAABAAsAAAATAAAAAAABAAsAAAATAAEAAAABAAsAAAATAAIAAAABAAsAAAATAAMAAAABAAsAAAATAAQAAAABAAsAAAATAAUAAAABAAsAAAATAAYAAAABAAsAAAATAAcAAAABAAsAAAATAAgAAAABAAsAAAATAAkAAAABAAsAAAATAAoAAAABAAsAAAATAAsAAAABAAsAAAATAAwAAAABAAsAAAATAA0AAAABAAsAAAATAA4AAAABAAsAAAATAA8AAAABAAsAAAATABAAAAABAAsAAAATABEAAAABAAsAAAATABIAAAABAAsAAAATABMAAAABAAsAAAATABQAAAABAAsAAAAUAAAAAAABAAsAAAAUAAEAAAABAAsAAAAUAAIAAAABAAsAAAAUAAMAAAABAAsAAAAUAAQAAAABAAsAAAAUAAUAAAABAAsAAAAUAAYAAAABAAsAAAAUAAcAAAABAAsAAAAUAAgAAAABAAsAAAAUAAkAAAABAAsAAAAUAAoAAAABAAsAAAAUAAsAAAABAAsAAAAUAAwAAAABAAsAAAAUAA0AAAABAAsAAAAUAA4AAAABAAsAAAAUAA8AAAABAAsAAAAUABAAAAABAAsAAAAUABEAAAABAAsAAAAUABIAAAABAAsAAAAUABMAAAABAAsAAAAUABQAAAABAAsAAAA=")
tile_set = ExtResource("5_6sheb")

[node name="BoardUi" type="Node2D" parent="MatchUi"]
script = ExtResource("6_wd52r")
metadata/_custom_type_script = "uid://b5lfouqrpasn3"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(16, 168)
zoom = Vector2(2, 2)
script = ExtResource("7_icxsr")
move_by_mouse = false

[node name="Board" type="Node2D" parent="."]
script = ExtResource("8_fe3c6")

[node name="BoardTileMap" type="TileMapLayer" parent="Board"]
tile_map_data = PackedByteArray("AAAAAAAAAAAKAAEAAAAAAAEAAAAKAAEAAAAAAAIAAAAKAAEAAAAAAAMAAAAKAAEAAAAAAAQAAAAKAAEAAAAAAAUAAAAKAAEAAAAAAAYAAAAIAAUAAAAAAAcAAAAIAAUAAAAAAAgAAAAIAAUAAAAAAAkAAAAIAAUAAAAAAAoAAAAIAAUAAAAAAAsAAAAIAAUAAAAAAAwAAAAIAAUAAAAAAA0AAAAIAAUAAAAAAA4AAAAIAAUAAAAAAA8AAAAIAAUAAAAAABAAAAAIAAUAAAAAABEAAAAIAAUAAAAAABIAAAAIAAUAAAAAABMAAAAIAAUAAAAAABQAAAAIAAUAAAABAAAAAAAKAAEAAAABAAEAAAAKAAEAAAABAAIAAAAKAAEAAAABAAMAAAAKAAEAAAABAAQAAAAKAAEAAAABAAUAAAAKAAEAAAABAAYAAAAKAAEAAAABAAcAAAAIAAUAAAABAAgAAAAIAAUAAAABAAkAAAAIAAUAAAABAAoAAAAIAAUAAAABAAsAAAACAAYAAAABAAwAAAAIAAUAAAABAA0AAAAFAAAAAAABAA4AAAAIAAUAAAABAA8AAAAIAAUAAAABABAAAAAIAAUAAAABABEAAAAIAAUAAAABABIAAAAIAAUAAAABABMAAAAIAAUAAAABABQAAAAIAAUAAAACAAAAAAAKAAEAAAACAAEAAAAKAAEAAAACAAIAAAAKAAEAAAACAAMAAAAKAAEAAAACAAQAAAAKAAEAAAACAAUAAAAKAAEAAAACAAYAAAAKAAEAAAACAAcAAAAKAAEAAAACAAgAAAAIAAUAAAACAAkAAAAIAAUAAAACAAoAAAAIAAUAAAACAAsAAAACAAYAAAACAAwAAAAFAAAAAAACAA0AAAAFAAAAAAACAA4AAAAFAAAAAAACAA8AAAAFAAAAAAACABAAAAAFAAAAAAACABEAAAAFAAAAAAACABIAAAAIAAUAAAACABMAAAAIAAUAAAACABQAAAAIAAUAAAADAAAAAAAKAAEAAAADAAEAAAAKAAEAAAADAAIAAAAKAAEAAAADAAMAAAAKAAEAAAADAAQAAAAKAAEAAAADAAUAAAAKAAEAAAADAAYAAAAKAAEAAAADAAcAAAAKAAEAAAADAAgAAAAHAAUAAAADAAkAAAAHAAUAAAADAAoAAAACAAYAAAADAAsAAAACAAYAAAADAAwAAAAHAAUAAAADAA0AAAAHAAUAAAADAA4AAAAJAAEAAAADAA8AAAAJAAEAAAADABAAAAAJAAEAAAADABEAAAAJAAEAAAADABIAAAAFAAAAAAADABMAAAAFAAAAAAADABQAAAAIAAUAAAAEAAAAAAAKAAEAAAAEAAEAAAAKAAEAAAAEAAIAAAACAAYAAAAEAAMAAAAKAAEAAAAEAAQAAAAKAAEAAAAEAAUAAAAKAAEAAAAEAAYAAAAKAAEAAAAEAAcAAAAKAAEAAAAEAAgAAAACAAYAAAAEAAkAAAACAAYAAAAEAAoAAAACAAYAAAAEAAsAAAAIAAUAAAAEAAwAAAAHAAUAAAAEAA0AAAAHAAUAAAAEAA4AAAAHAAUAAAAEAA8AAAAHAAUAAAAEABAAAAAFAAAAAAAEABEAAAAFAAAAAAAEABIAAAAFAAAAAAAEABMAAAAFAAAAAAAEABQAAAAIAAUAAAAFAAAAAAACAAYAAAAFAAEAAAACAAYAAAAFAAIAAAAKAAEAAAAFAAMAAAAKAAEAAAAFAAQAAAAKAAEAAAAFAAUAAAAKAAEAAAAFAAYAAAAIAAUAAAAFAAcAAAAGAAUAAAAFAAgAAAACAAYAAAAFAAkAAAACAAYAAAAFAAoAAAACAAYAAAAFAAsAAAACAAYAAAAFAAwAAAAHAAUAAAAFAA0AAAAIAAUAAAAFAA4AAAAIAAUAAAAFAA8AAAAIAAUAAAAFABAAAAAIAAUAAAAFABEAAAAFAAAAAAAFABIAAAAJAAEAAAAFABMAAAAIAAUAAAAFABQAAAAFAAAAAAAGAAAAAAAIAAUAAAAGAAEAAAAIAAUAAAAGAAIAAAAIAAUAAAAGAAMAAAAIAAUAAAAGAAQAAAAKAAEAAAAGAAUAAAAEAAYAAAAGAAYAAAAGAAUAAAAGAAcAAAACAAYAAAAGAAgAAAACAAYAAAAGAAkAAAAIAAUAAAAGAAoAAAAIAAUAAAAGAAsAAAACAAYAAAAGAAwAAAACAAYAAAAGAA0AAAACAAYAAAAGAA4AAAACAAYAAAAGAA8AAAACAAYAAAAGABAAAAACAAYAAAAGABEAAAAIAAUAAAAGABIAAAAJAAEAAAAGABMAAAAJAAEAAAAGABQAAAAIAAUAAAAHAAAAAAAIAAUAAAAHAAEAAAAIAAUAAAAHAAIAAAAIAAUAAAAHAAMAAAAIAAUAAAAHAAQAAAAIAAUAAAAHAAUAAAAIAAUAAAAHAAYAAAAGAAUAAAAHAAcAAAACAAYAAAAHAAgAAAAIAAUAAAAHAAkAAAAIAAUAAAAHAAoAAAAIAAUAAAAHAAsAAAAIAAUAAAAHAAwAAAAIAAUAAAAHAA0AAAAIAAUAAAAHAA4AAAAIAAUAAAAHAA8AAAAIAAUAAAAHABEAAAAIAAUAAAAHABIAAAAFAAAAAAAHABMAAAAJAAEAAAAHABQAAAAIAAUAAAAIAAAAAAAIAAUAAAAIAAEAAAAIAAUAAAAIAAIAAAACAAYAAAAIAAMAAAACAAYAAAAIAAQAAAAIAAUAAAAIAAUAAAAGAAUAAAAIAAYAAAAIAAUAAAAIAAcAAAACAAYAAAAIAAgAAAAIAAUAAAAIAAkAAAAIAAUAAAAIAAoAAAAIAAUAAAAIAAsAAAAIAAUAAAAIAAwAAAAGAAUAAAAIAA0AAAAGAAUAAAAIAA4AAAAGAAUAAAAIAA8AAAAGAAUAAAAIABAAAAAIAAUAAAAIABEAAAAIAAUAAAAIABIAAAAIAAUAAAAIABMAAAAJAAEAAAAIABQAAAAIAAUAAAAJAAAAAAAIAAUAAAAJAAEAAAACAAYAAAAJAAIAAAACAAYAAAAJAAMAAAAIAAUAAAAJAAQAAAAGAAUAAAAJAAUAAAAGAAUAAAAJAAYAAAAIAAUAAAAJAAcAAAACAAYAAAAJAAgAAAAIAAUAAAAJAAkAAAAIAAUAAAAJAAoAAAAIAAUAAAAJAAsAAAAGAAUAAAAJAAwAAAAIAAUAAAAJAA0AAAAIAAUAAAAJAA4AAAAIAAUAAAAJAA8AAAAIAAUAAAAJABAAAAAIAAUAAAAJABEAAAAIAAUAAAAJABIAAAAIAAUAAAAJABMAAAAJAAEAAAAJABQAAAAIAAUAAAAKAAAAAAACAAYAAAAKAAEAAAACAAYAAAAKAAIAAAAIAAUAAAAKAAMAAAAIAAUAAAAKAAQAAAAGAAUAAAAKAAUAAAAIAAUAAAAKAAYAAAAIAAUAAAAKAAcAAAACAAYAAAAKAAgAAAAIAAUAAAAKAAkAAAAIAAUAAAAKAAoAAAAIAAUAAAAKAAsAAAAIAAUAAAAKAAwAAAAIAAUAAAAKAA0AAAAIAAUAAAAKAA4AAAAIAAUAAAAKAA8AAAAIAAUAAAAKABAAAAAIAAUAAAAKABEAAAAIAAUAAAAKABIAAAAIAAUAAAAKABMAAAAJAAEAAAAKABQAAAAIAAUAAAALAAAAAAAIAAUAAAALAAEAAAAGAAUAAAALAAIAAAAGAAUAAAALAAMAAAAGAAUAAAALAAQAAAAGAAUAAAALAAUAAAAIAAUAAAALAAYAAAAIAAUAAAALAAcAAAAIAAUAAAALAAgAAAAIAAUAAAALAAkAAAAIAAUAAAALAAoAAAAIAAUAAAALAAsAAAAIAAUAAAALAAwAAAAIAAUAAAALAA0AAAAIAAUAAAALAA4AAAAIAAUAAAALAA8AAAAIAAUAAAALABAAAAAIAAUAAAALABEAAAAIAAUAAAALABIAAAAIAAUAAAALABMAAAAJAAEAAAALABQAAAAIAAUAAAAMAAAAAAAGAAUAAAAMAAEAAAAGAAUAAAAMAAIAAAAIAAUAAAAMAAMAAAAIAAUAAAAMAAQAAAAGAAUAAAAMAAUAAAAGAAUAAAAMAAYAAAAGAAUAAAAMAAcAAAAGAAUAAAAMAAgAAAAGAAUAAAAMAAkAAAAIAAUAAAAMAAoAAAAIAAUAAAAMAAsAAAAIAAUAAAAMAAwAAAAIAAUAAAAMAA0AAAAIAAUAAAAMAA4AAAAIAAUAAAAMAA8AAAAGAAUAAAAMABAAAAAIAAUAAAAMABEAAAAIAAUAAAAMABIAAAAIAAUAAAAMABMAAAAJAAEAAAAMABQAAAAIAAUAAAANAAAAAAAIAAUAAAANAAEAAAAHAAUAAAANAAIAAAAHAAUAAAANAAMAAAAHAAUAAAANAAQAAAAHAAUAAAANAAUAAAAIAAUAAAANAAYAAAAIAAUAAAANAAcAAAAIAAUAAAANAAgAAAAGAAUAAAANAAkAAAAGAAUAAAANAAoAAAAHAAgAAAANAAsAAAAHAAgAAAANAAwAAAAIAAUAAAANAA0AAAAIAAUAAAANAA4AAAAIAAUAAAANAA8AAAAGAAUAAAANABAAAAAIAAUAAAANABEAAAAIAAUAAAANABIAAAAIAAUAAAANABMAAAAJAAEAAAANABQAAAAIAAUAAAAOAAAAAAAIAAUAAAAOAAEAAAAIAAUAAAAOAAIAAAAGAAUAAAAOAAMAAAAIAAUAAAAOAAQAAAAHAAUAAAAOAAUAAAAHAAUAAAAOAAYAAAAHAAUAAAAOAAcAAAAHAAUAAAAOAAgAAAAHAAUAAAAOAAkAAAAHAAgAAAAOAAoAAAAHAAgAAAAOAAsAAAAHAAgAAAAOAAwAAAAHAAgAAAAOAA0AAAAIAAUAAAAOAA4AAAAIAAUAAAAOAA8AAAAGAAUAAAAOABAAAAAIAAUAAAAOABEAAAAIAAUAAAAOABIAAAAIAAUAAAAOABMAAAAJAAEAAAAOABQAAAAIAAUAAAAPAAAAAAAIAAUAAAAPAAEAAAAIAAUAAAAPAAIAAAAGAAUAAAAPAAMAAAAIAAUAAAAPAAQAAAAIAAUAAAAPAAUAAAAIAAUAAAAPAAYAAAAIAAUAAAAPAAcAAAAIAAUAAAAPAAgAAAAHAAgAAAAPAAkAAAAHAAgAAAAPAAoAAAAHAAgAAAAPAAsAAAAHAAgAAAAPAAwAAAAHAAgAAAAPAA0AAAAGAAUAAAAPAA4AAAAIAAUAAAAPAA8AAAAGAAUAAAAPABAAAAAIAAUAAAAPABEAAAAIAAUAAAAPABIAAAAIAAUAAAAPABMAAAAFAAAAAAAPABQAAAAIAAUAAAAQAAAAAAAIAAUAAAAQAAEAAAAGAAEAAAAQAAIAAAAGAAUAAAAQAAMAAAAIAAUAAAAQAAQAAAAIAAUAAAAQAAUAAAAIAAUAAAAQAAYAAAAIAAUAAAAQAAcAAAAIAAUAAAAQAAgAAAAHAAgAAAAQAAkAAAAHAAgAAAAQAAoAAAAHAAgAAAAQAAsAAAAHAAgAAAAQAAwAAAAHAAgAAAAQAA0AAAAGAAUAAAAQAA4AAAAGAAUAAAAQAA8AAAAHAAUAAAAQABAAAAAHAAUAAAAQABEAAAAHAAUAAAAQABIAAAAIAAUAAAAQABMAAAAIAAUAAAAQABQAAAAIAAUAAAARAAAAAAAIAAUAAAARAAEAAAAGAAEAAAARAAIAAAAGAAEAAAARAAMAAAAGAAEAAAARAAQAAAAIAAUAAAARAAUAAAAIAAUAAAARAAYAAAAIAAUAAAARAAcAAAAIAAUAAAARAAgAAAAHAAgAAAARAAkAAAAHAAgAAAARAAoAAAAHAAgAAAARAAsAAAAIAAUAAAARAAwAAAAHAAgAAAARAA0AAAAIAAUAAAARAA4AAAAGAAUAAAARAA8AAAAIAAUAAAARABAAAAAIAAUAAAARABEAAAAHAAUAAAARABIAAAAHAAUAAAARABMAAAAHAAUAAAARABQAAAAHAAUAAAASAAAAAAAGAAEAAAASAAEAAAAGAAEAAAASAAIAAAAGAAEAAAASAAMAAAAGAAEAAAASAAQAAAAGAAEAAAASAAUAAAAIAAUAAAASAAYAAAAIAAUAAAASAAcAAAAIAAUAAAASAAgAAAAIAAUAAAASAAkAAAAIAAUAAAASAAoAAAAIAAUAAAASAAsAAAAIAAUAAAASAAwAAAAIAAUAAAASAA0AAAAGAAUAAAASAA4AAAAGAAUAAAASAA8AAAAIAAUAAAASABAAAAAIAAUAAAASABEAAAAIAAUAAAASABIAAAAIAAUAAAASABMAAAAIAAUAAAASABQAAAAIAAUAAAATAAAAAAAIAAUAAAATAAEAAAAIAAUAAAATAAIAAAAGAAEAAAATAAMAAAAGAAEAAAATAAQAAAAIAAUAAAATAAUAAAAIAAUAAAATAAYAAAAIAAUAAAATAAcAAAAFAAAAAAATAAgAAAAFAAAAAAATAAkAAAAIAAUAAAATAAoAAAAIAAUAAAATAAsAAAAFAAAAAAATAAwAAAAFAAAAAAATAA0AAAAFAAAAAAATAA4AAAAFAAAAAAATAA8AAAAIAAUAAAATABAAAAAIAAUAAAATABEAAAAIAAUAAAATABIAAAAIAAUAAAATABMAAAAIAAUAAAATABQAAAAIAAUAAAAUAAAAAAAIAAUAAAAUAAEAAAAIAAUAAAAUAAIAAAAIAAUAAAAUAAMAAAAIAAUAAAAUAAQAAAAIAAUAAAAUAAUAAAAIAAUAAAAUAAcAAAAIAAUAAAAUAAgAAAAFAAAAAAAUAAkAAAAFAAAAAAAUAAoAAAAJAAEAAAAUAAsAAAAFAAAAAAAUAAwAAAAIAAUAAAAUAA0AAAAIAAUAAAAUAA4AAAAIAAUAAAAUAA8AAAAIAAUAAAAUABAAAAAIAAUAAAAUABEAAAAIAAUAAAAUABIAAAAIAAUAAAAUABMAAAAIAAUAAAAUABQAAAAIAAUAAAAHABAAAAAIAAUAAAAUAAYAAAAGAAUAAAA=")
tile_set = ExtResource("5_6sheb")
script = ExtResource("9_0mk4c")

[node name="ObstacleTileMap" type="TileMapLayer" parent="Board/BoardTileMap"]
tile_map_data = PackedByteArray("AAAHABAAAAAAAAYAAAAHAA8AAAABAAYAAAAHAA0AAAAAAAYAAAAHAAwAAAABAAYAAAAHAAsAAAAAAAYAAAAIAAsAAAAAAAYAAAAJAAoAAAABAAYAAAALABIAAAAAAAYAAAAKAA8AAAAKAAUAAAAMAA4AAAAAAAYAAAANAA4AAAAAAAYAAAARAAsAAAAAAAYAAAASAAoAAAAKAAUAAAASAAgAAAAAAAYAAAASAAYAAAAKAAUAAAAQAAQAAAAKAAUAAAAOAAIAAAAKAAUAAAANAAIAAAAAAAYAAAAMAAIAAAAAAAYAAAAKAAIAAAAAAAYAAAAIAAIAAAAKAAUAAAAKAAkAAAABAAYAAAALAAkAAAAAAAYAAAANAAkAAAAAAAYAAAANAAgAAAAAAAYAAAAOAAgAAAAAAAYAAAAPAAcAAAAJAAUAAAAOAAUAAAAJAAUAAAAKAAUAAAAJAAUAAAAMAAUAAAABAAYAAAAHAAUAAAAJAAUAAAAFAAYAAAAJAAUAAAAFAAEAAAAJAAUAAAAOAA0AAAAKAAUAAAAMABIAAAAKAAUAAAAOAAcAAAABAAYAAAAMABAAAAABAAYAAAAPAA0AAAABAAYAAAAQAA0AAAABAAYAAAARAA0AAAABAAYAAAASAAwAAAABAAYAAAALAAgAAAABAAYAAAAMAAgAAAABAAYAAAANAAUAAAABAAYAAAASAAkAAAABAAYAAAAMAA8AAAAJAAUAAAASAAcAAAAJAAUAAAARAAQAAAAJAAUAAAASAAQAAAAJAAUAAAASAAUAAAAJAAUAAAAPAAIAAAAKAAUAAAA=")
tile_set = ExtResource("5_6sheb")
script = ExtResource("10_x5wxo")

[node name="PlayerA" type="TileMapLayer" parent="Board/BoardTileMap"]
modulate = Color(0.1, 0.85, 1, 0.235294)
z_index = 128
position = Vector2(0, 1)
tile_map_data = PackedByteArray("AAAMAAkAAAAAAAsAAAAMAAoAAAAAAAsAAAAMAAsAAAAAAAsAAAAMAAwAAAAAAAsAAAANAAwAAAAAAAsAAAALAAoAAAAAAAsAAAAQAAcAAAAAAAsAAAARAAcAAAAAAAsAAAAQAAYAAAAAAAsAAAARAAYAAAAAAAsAAAAPAAYAAAAAAAsAAAA=")
tile_set = ExtResource("5_6sheb")
occlusion_enabled = false
metadata/Team = "A"

[node name="PlayerB" type="TileMapLayer" parent="Board/BoardTileMap"]
modulate = Color(1, 0.1, 0.34, 0.235294)
z_index = 128
position = Vector2(0, -1)
tile_map_data = PackedByteArray("AAAHABIAAAAAAAsAAAAHABMAAAAAAAsAAAAHABQAAAAAAAsAAAAIABIAAAAAAAsAAAAIABMAAAAAAAsAAAAIABQAAAAAAAsAAAAJABIAAAAAAAsAAAAJABMAAAAAAAsAAAAJABQAAAAAAAsAAAAKABIAAAAAAAsAAAAKABMAAAAAAAsAAAAKABQAAAAAAAsAAAAMABQAAAAAAAsAAAAMABMAAAAAAAsAAAAMABEAAAAAAAsAAAALABQAAAAAAAsAAAALABMAAAAAAAsAAAALABEAAAAAAAsAAAALABAAAAAAAAsAAAANAA8AAAAAAAsAAAANABAAAAAAAAsAAAANABEAAAAAAAsAAAANABIAAAAAAAsAAAANABMAAAAAAAsAAAANABQAAAAAAAsAAAASAAMAAAAAAAsAAAASAAIAAAAAAAsAAAASAAEAAAAAAAsAAAASAAAAAAAAAAsAAAAFAAAAAAAAAAsAAAAFAAIAAAAAAAsAAAAGAAAAAAAAAAsAAAAGAAEAAAAAAAsAAAAGAAIAAAAAAAsAAAAFAAMAAAAAAAsAAAAFAAQAAAAAAAsAAAAFAAUAAAAAAAsAAAAGAAMAAAAAAAsAAAAGAAQAAAAAAAsAAAAGAAUAAAAAAAsAAAAHAAAAAAAAAAsAAAAHAAEAAAAAAAsAAAAHAAIAAAAAAAsAAAAHAA4AAAAAAAsAAAAIAAEAAAAAAAsAAAAIAAMAAAAAAAsAAAAJAAEAAAAAAAsAAAAKAAEAAAAAAAsAAAALAAEAAAAAAAsAAAANAAEAAAAAAAsAAAAOAAEAAAAAAAsAAAAPAAEAAAAAAAsAAAAQAAEAAAAAAAsAAAAQAAIAAAAAAAsAAAAQAAAAAAAAAAsAAAARAAIAAAAAAAsAAAAOAAAAAAAAAAsAAAAPAAAAAAAAAAsAAAAKAAAAAAAAAAsAAAALAAAAAAAAAAsAAAAIAAAAAAAAAAsAAAAJAAAAAAAAAAsAAAAIAAUAAAAAAAsAAAAIAAQAAAAAAAsAAAAJAAUAAAAAAAsAAAAHAAMAAAAAAAsAAAAHAAQAAAAAAAsAAAAMAAEAAAAAAAsAAAAMAAAAAAAAAAsAAAANAAAAAAAAAAsAAAARAAMAAAAAAAsAAAARAAEAAAAAAAsAAAATAAIAAAAAAAsAAAARAAAAAAAAAAsAAAATAAMAAAAAAAsAAAATAAEAAAAAAAsAAAATAAAAAAAAAAsAAAAJAAIAAAAAAAsAAAALAAIAAAAAAAsAAAAHAAYAAAAAAAsAAAAIAAYAAAAAAAsAAAAJAAYAAAAAAAsAAAAKAAYAAAAAAAsAAAALAAYAAAAAAAsAAAAMAAYAAAAAAAsAAAANAAYAAAAAAAsAAAALAAUAAAAAAAsAAAAGAAsAAAAAAAsAAAAGAAwAAAAAAAsAAAAGAA0AAAAAAAsAAAAGAA4AAAAAAAsAAAAGAA8AAAAAAAsAAAAGABAAAAAAAAsAAAAGABEAAAAAAAsAAAAGABIAAAAAAAsAAAAGABMAAAAAAAsAAAAGABQAAAAAAAsAAAAHABEAAAAAAAsAAAAIABEAAAAAAAsAAAAJABEAAAAAAAsAAAAKABEAAAAAAAsAAAAIABAAAAAAAAsAAAAJABAAAAAAAAsAAAAKABAAAAAAAAsAAAALAA8AAAAAAAsAAAAJAA8AAAAAAAsAAAAIAA8AAAAAAAsAAAAGAAYAAAAAAAsAAAA=")
tile_set = ExtResource("5_6sheb")
occlusion_enabled = false
metadata/Team = "B"

[node name="BoardInputManager" type="Node" parent="Board"]
script = ExtResource("11_k5pj8")
metadata/_custom_type_script = "uid://i3exemmdxb6d"

[node name="Units" type="Node2D" parent="Board"]
